Fix the end time bound in WebHistoryService to match the API

Change the exclusive end time bound in WebHistoryService to be inclusive,
as required by the history.google.com API.

BUG=674165

Review-Url: https://codereview.chromium.org/2621143004
Cr-Commit-Position: refs/heads/master@{#443245}

Former-commit-id: 39f5b80c5358f69f8407557990beed449fa03e74